--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,14 @@
+2017-01-13  Gary Dismukes  <dismukes@adacore.com>
+
+	* exp_util.adb: Minor reformatting.
+
+2017-01-13  Yannick Moy  <moy@adacore.com>
+
+	* exp_spark.adb: Code cleanup.
+	* sem_ch9.adb (Analyze_Delay_Until): Resolve
+	expression so that calls are identified as such inside delay
+	until.
+
 2017-01-13  Ed Schonberg  <schonberg@adacore.com>
 
 	* exp_util.adb (Insert_Actions): Handle Iterated_Component_Association.
