--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-13  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	* gcc-interface/Makefile.in (SPARC/Solaris): Fix typo.
+
 2017-01-13  Arnaud Charlet  <charlet@adacore.com>
 
 	* doc/gnat_ugn/getting_started_with_gnat.rst,
