--- a/gcc/c/ChangeLog
+++ b/gcc/c/ChangeLog
@@ -1,5 +1,10 @@
 2017-01-13  Richard Biener  <rguenther@suse.de>
 
+	* gimple-parser.c (c_parser_gimple_compound_statement): Handle
+	nops.
+
+2017-01-13  Richard Biener  <rguenther@suse.de>
+
 	* gimple-parser.c (c_parser_gimple_postfix_expression): Parse
 	_Literal ( type-name ) number.
 
